# Final-Project

./: .gitignore  CIFAR10.ipynb  DYNAMIC_ResNet_CIFAR10_26_3.ipynb  First_512_DYNAMIC_ResNet_CIFAR10.ipynb  MNIST.ipynb  Middle_512_DYNAMIC_ResNet_CIFAR10.ipynb  Plots.ipynb  Plots_ZoomedDropout.ipynb  README.md  ResidualUnit.py  pyproject.toml  trial_results._128_first.json  trial_results_mid_512.json
TrialResults/: trial_results.json  trial_results_first_128.json  trial_results_first_512.json  trial_results_mid_512.json
pytorch/: DYNAMIC_ResNet_CIFAR10.ipynb
